--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://github.com/shockerqt/monopoly#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "typedoc": "^0.22.13"
+    "express": "^4.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -32,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
+    "typedoc": "^0.22.13",
     "typescript": "^4.6.3"
   }
 }
