--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc --rootDir src --outDir dist",
     "start": "node dist/app.js",
-    "dev": "rm -rf dist && npm run build && npm run start"
+    "dev": "rm -rf dist && npm run build && npm run start",
+    "test": "rm -rf dist && npm run build && node dist/test.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
   "homepage": "https://github.com/shockerqt/monopoly#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
